--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,16 +38,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/clear_all_string"
             android:minHeight="0dp"
-            android:minWidth="0dp" />
+            android:minWidth="0dp"
+            android:text="@string/clear_all_string" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <TextView
             android:id="@+id/textViewCostHeader"
@@ -55,6 +56,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
+            android:paddingBottom="@dimen/activity_vertical_margin_small"
+            android:paddingTop="@dimen/activity_vertical_margin_small"
+            android:background="@drawable/back_border_bottom_top_left"
             android:text="@string/cost_string" />
 
         <TextView
@@ -63,6 +67,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
+            android:paddingBottom="@dimen/activity_vertical_margin_small"
+            android:paddingTop="@dimen/activity_vertical_margin_small"
+            android:background="@drawable/back_border"
             android:text="@string/count_string" />
 
         <TextView
@@ -71,6 +78,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
+            android:paddingBottom="@dimen/activity_vertical_margin_small"
+            android:paddingTop="@dimen/activity_vertical_margin_small"
+            android:background="@drawable/back_border_bottom_top_right"
             android:text="@string/total_string" />
     </LinearLayout>
 
@@ -88,7 +98,8 @@
             <TableLayout
                 android:id="@+id/tableLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@drawable/back_border_bottom_left_right">
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -102,6 +113,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayoutLimitAndTotal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorLightGreen"
